// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`archive-with-mobile-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            Мой архив.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="directWrap"
  >
    <iframe
      class="direct direct archiveBottomDirect"
      src="/direct.html?blockId=R-I-267060-3"
    />
  </div>
  <div
    class="bottom-0"
  />
</div>
`;

exports[`archive-with-mobile-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            Мой архив.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="directWrap"
  >
    <iframe
      class="direct direct archiveBottomDirect"
      src="/direct.html?blockId=custom-bottom-touch-direct-id"
    />
  </div>
  <div
    class="bottom-0"
  />
</div>
`;

exports[`content-archive-READY 1`] = `
<div
  class=""
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            my-archive.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`content-archive-fail 1`] = `
<div
  class=""
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Файл защищён паролем.
      </h2>
      <div
        class="message"
      >
        Для просмотра сохраните его на компьютер.
      </div>
    </div>
  </div>
</div>
`;

exports[`content-archive-wait 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    />
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`content-error-404 1`] = `
<div
  class=""
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Несуществующая страница
      </h2>
      <div
        class="message"
      >
        Такой страницы не существует. Проверьте написание адреса — может быть, вы просто ошиблись при наборе. А может быть этой страницы уже нет.
      </div>
    </div>
  </div>
</div>
`;

exports[`content-html-1-page 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`content-html-2-pages-withoutSize (page load not started) 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    >
      тюлень_олень_и_еноты.odt
    </h2>
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`content-html-3-pages 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <div>
            yo
          </div>
        </div>
      </div>
      <div
        class="js-doc-page page"
        data-index="2"
      >
        <div
          class="__page-2 fail"
        >
          <span>
            Ошибка загрузки страницы
          </span>
        </div>
      </div>
      <div
        class="js-doc-page page waitingImageStub_blinking"
        data-index="3"
      >
        <div
          class="__page-3 wait"
        />
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
  <div
    class="pagerWrapper"
  >
    <div
      class="pagerLayout"
    >
      <div
        class="pager"
      >
        <div
          class="pageCounterWrapper"
        >
          <input
            class="input"
            min="1"
            type="number"
            value="1"
          />
          <span
            class="pageCounter"
          >
            1 из 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`content-html-3-pages-withoutSize (page is loading) 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    >
      тюлень_олень_и_еноты.odt
    </h2>
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`content-html-4-pages-withoutSize (page ready) 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html html_withoutSize"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="spinPage"
        >
          <div
            class="wait page-spin-top"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
      </div>
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="js-doc-page pageWithoutSize"
          data-index="3"
        >
          <div
            class="__page-3"
          >
            <div>
              some content
            </div>
          </div>
        </div>
      </div>
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="spinPage"
        >
          <div
            class="wait page-spin-bottom"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
  <div
    class="pagerWrapper"
  >
    <div
      class="pagerLayout"
    >
      <div
        class="pager"
      >
        <div
          class="pageCounterWrapper"
        >
          <input
            class="input"
            min="1"
            type="number"
            value="3"
          />
          <span
            class="pageCounter"
          >
            3 из 4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`content-iframe 1`] = `
<object
  class="iframe"
  data="/some/iframe/url"
  type="application/pdf"
>
  <div>
     
  </div>
</object>
`;

exports[`content-no-url 1`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Добро пожаловать!
    </span>
  </h2>
</div>
`;

exports[`content-wait 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    />
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`content-with-advertisement (1400 < width < 1800, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-advertisement (1400 < width < 1800, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-advertisement (width < 1400, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-advertisement (width < 1400, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-advertisement (width > 1800, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-advertisement (width > 1800, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-touch-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <div
        class="js-doc-page page pageMobile"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="directWrap"
      >
        <iframe
          class="direct direct"
          src="/direct.html?blockId=R-I-267060-3"
        />
      </div>
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`content-with-touch-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <div
        class="js-doc-page page pageMobile"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="directWrap"
      >
        <iframe
          class="direct direct"
          src="/direct.html?blockId=custom-bottom-touch-direct-id"
        />
      </div>
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`error-with-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Ой, что-то сломалось…
      </h2>
      <div
        class="message"
      >
        Открыть документ не удалось. Пожалуйста, повторите попытку позже.
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="direct bottom-direct placeholder"
  />
  <div
    class="bottom-0"
  />
</div>
`;

exports[`error-with-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Ой, что-то сломалось…
      </h2>
      <div
        class="message"
      >
        Открыть документ не удалось. Пожалуйста, повторите попытку позже.
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="direct bottom-direct placeholder"
  />
  <div
    class="bottom-0"
  />
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment archive-with-mobile-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            Мой архив.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="directWrap"
  >
    <iframe
      class="direct direct archiveBottomDirect"
      src="/direct.html?blockId=R-I-267060-3"
    />
  </div>
  <div
    class="bottom-0"
  />
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment archive-with-mobile-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            Мой архив.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="directWrap"
  >
    <iframe
      class="direct direct archiveBottomDirect"
      src="/direct.html?blockId=custom-bottom-touch-direct-id"
    />
  </div>
  <div
    class="bottom-0"
  />
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-archive-READY 1`] = `
<div
  class=""
>
  <div
    class="archive"
  >
    <div
      class="leftPanel"
    >
      <div
        class="archiveInfo"
      >
        <ufo-rocks_resource-icon
          cls="archiveIcon"
          ext="zip"
          mediatype="archive"
          size="m"
        />
        <div
          class="archiveInfoText"
        >
          <div
            class="title"
          >
            my-archive.zip
          </div>
          <div
            class="infoLine"
          >
            <span>
              Объектов:
            </span>
             
            <span />
          </div>
        </div>
      </div>
      <div
        class="listing"
      >
        <div
          class="listingItem"
        >
          <span>
            Пустая папка
          </span>
        </div>
      </div>
    </div>
    <div
      class="preview"
    >
      <div
        class="tip"
      >
        <span>
          Теперь можно просматривать
и извлекать отдельные файлы из архива
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-archive-fail 1`] = `
<div
  class=""
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Файл защищён паролем.
      </h2>
      <div
        class="message"
      >
        Для просмотра сохраните его на компьютер.
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-archive-wait 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    />
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-error-404 1`] = `
<div
  class=""
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Несуществующая страница
      </h2>
      <div
        class="message"
      >
        Такой страницы не существует. Проверьте написание адреса — может быть, вы просто ошиблись при наборе. А может быть этой страницы уже нет.
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-html-1-page 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-html-2-pages-withoutSize (page load not started) 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    >
      тюлень_олень_и_еноты.odt
    </h2>
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-html-3-pages 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <div>
            yo
          </div>
        </div>
      </div>
      <div
        class="js-doc-page page"
        data-index="2"
      >
        <div
          class="__page-2 fail"
        >
          <span>
            Ошибка загрузки страницы
          </span>
        </div>
      </div>
      <div
        class="js-doc-page page waitingImageStub_blinking"
        data-index="3"
      >
        <div
          class="__page-3 wait"
        />
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
  <div
    class="pagerWrapper"
  >
    <div
      class="pagerLayout"
    >
      <div
        class="pager"
      >
        <div
          class="pageCounterWrapper"
        >
          <input
            class="input"
            min="1"
            type="number"
            value="1"
          />
          <span
            class="pageCounter"
          >
            1 из 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-html-3-pages-withoutSize (page is loading) 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    >
      тюлень_олень_и_еноты.odt
    </h2>
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-html-4-pages-withoutSize (page ready) 1`] = `
<div
  class=""
>
  <div
    class="html js-doc-html html_withoutSize"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="spinPage"
        >
          <div
            class="wait page-spin-top"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
      </div>
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="js-doc-page pageWithoutSize"
          data-index="3"
        >
          <div
            class="__page-3"
          >
            <div>
              some content
            </div>
          </div>
        </div>
      </div>
      <div
        class="pageWithoutSizeWrapper"
      >
        <div
          class="spinPage"
        >
          <div
            class="wait page-spin-bottom"
          >
            <lego-components_spin
              progress="true"
              size="l"
              view="default"
            />
          </div>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
    </div>
  </div>
  <div
    class="pagerWrapper"
  >
    <div
      class="pagerLayout"
    >
      <div
        class="pager"
      >
        <div
          class="pageCounterWrapper"
        >
          <input
            class="input"
            min="1"
            type="number"
            value="3"
          />
          <span
            class="pageCounter"
          >
            3 из 4
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-iframe 1`] = `
<object
  class="iframe"
  data="/some/iframe/url"
  type="application/pdf"
>
  <div>
     
  </div>
</object>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-no-url 1`] = `
<div
  class="no-url"
>
  <h2>
    <span>
      Добро пожаловать!
    </span>
  </h2>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-wait 1`] = `
<div>
  <div
    class="titleWrapper"
  >
    <h2
      class="title"
    />
  </div>
  <div
    class="godot"
  >
    <lego-components_spin
      progress="true"
      size="l"
      view="default"
    />
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (1400 < width < 1800, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (1400 < width < 1800, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (width < 1400, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (width < 1400, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (width > 1800, default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-advertisement (width > 1800, experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct top-direct placeholder"
      />
      <div
        class="bottom-0"
      />
      <div
        class="js-doc-page page"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="direct bottom-direct placeholder"
      />
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-touch-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <div
        class="js-doc-page page pageMobile"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="directWrap"
      >
        <iframe
          class="direct direct"
          src="/direct.html?blockId=R-I-267060-3"
        />
      </div>
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment content-with-touch-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="html js-doc-html"
  >
    <div
      class="pages"
    >
      <div
        class="titleWrapper"
      >
        <h2
          class="title"
        >
          тюлень_олень_и_еноты.odt
        </h2>
      </div>
      <div
        class="js-doc-page page pageMobile"
        data-index="1"
      >
        <div
          class="__page-1"
        >
          <span>
            вжух
          </span>
        </div>
      </div>
      <div
        class="sliderButtonsWrapper"
      >
        <div
          class="sliderButtons"
          style="max-width:unset;width:100%"
        />
        <div
          class="sliderButtonsDocsRightMargin"
        />
      </div>
      <span
        class="top-0"
      />
      <div
        class="directWrap"
      >
        <iframe
          class="direct direct"
          src="/direct.html?blockId=custom-bottom-touch-direct-id"
        />
      </div>
      <div
        class="bottom-0"
      />
    </div>
  </div>
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment error-with-advertisement (default) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Ой, что-то сломалось…
      </h2>
      <div
        class="message"
      >
        Открыть документ не удалось. Пожалуйста, повторите попытку позже.
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="direct bottom-direct placeholder"
  />
  <div
    class="bottom-0"
  />
</div>
`;

exports[`with dv_web_ad_custom_direct_exp experiment error-with-advertisement (experiment) 1`] = `
<div
  class="with-bottom-direct"
>
  <div
    class="viewport"
  >
    <div
      class="wrapper"
    >
      <div
        class="icon"
      />
      <h2
        class="title"
      >
        Ой, что-то сломалось…
      </h2>
      <div
        class="message"
      >
        Открыть документ не удалось. Пожалуйста, повторите попытку позже.
      </div>
    </div>
  </div>
  <span
    class="top-0"
  />
  <div
    class="direct bottom-direct placeholder"
  />
  <div
    class="bottom-0"
  />
</div>
`;
